# datasheet-downloader

./: .env.example  .gitignore  README.md  pyproject.toml
src/datasheet_downloader/: __init__.py  azure_storage_setup.py  cli.py  downloader.py  simple_azure_uploader.py
tests/: __init__.py  test_cli.py  test_downloader.py
tests/data/: test_linear_voltage_regulator_mpns.txt
